syntax = "proto3";

package orban.protocol.v1;

// 主訊息包裝器
message Message {
  string message_id = 1;
  uint64 timestamp = 2;

  oneof payload {
    AuthChallenge auth_challenge = 10;
    AuthResponse auth_response = 11;
    AuthSuccess auth_success = 12;

    AgentRegister agent_register = 20;
    RegisterAck register_ack = 21;

    TaskAssign task_assign = 30;
    TaskAccept task_accept = 31;
    TaskReject task_reject = 32;
    TaskProgress task_progress = 33;
    TaskComplete task_complete = 34;
    TaskFailed task_failed = 35;

    Heartbeat heartbeat = 40;
    MetricsBatch metrics_batch = 41;

    EarningsRecord earnings_record = 50;
    PayoutNotification payout_notification = 51;

    PowChallenge pow_challenge = 60;
    PowResponse pow_response = 61;

    Error error = 99;
  }
}

// ==================== 認證訊息 ====================

message AuthChallenge {
  string challenge = 1;
  uint64 timestamp = 2;
}

message AuthResponse {
  string agent_id = 1;
  bytes signature = 2;
  bytes public_key = 3;
}

message AuthSuccess {
  string jwt_token = 1;
  uint64 expires_in = 2;
}

// ==================== Agent 註冊 ====================

message AgentRegister {
  string agent_id = 1;
  Hardware hardware = 2;
  Capabilities capabilities = 3;
  Location location = 4;
  Availability availability = 5;
}

message Hardware {
  repeated GPUInfo gpus = 1;
  CPUInfo cpu = 2;
  uint32 memory_gb = 3;
  uint32 storage_available_gb = 4;
}

message GPUInfo {
  uint32 index = 1;
  string vendor = 2;
  string model = 3;
  uint32 vram_gb = 4;
  string compute_capability = 5;
  uint32 cuda_cores = 6;
  uint32 pcie_bandwidth_gbps = 7;
}

message CPUInfo {
  string model = 1;
  uint32 cores = 2;
  uint32 threads = 3;
}

message Capabilities {
  repeated string supported_frameworks = 1;
  uint32 max_batch_size = 2;
  bool fp16_support = 3;
  bool int8_support = 4;
}

message Location {
  string country = 1;
  string region = 2;
  uint32 latency_to_platform_ms = 3;
}

message Availability {
  uint32 hours_per_day = 1;
  float reliability_score = 2;
}

message RegisterAck {
  string agent_id = 1;
  string status = 2;
  Pricing pricing = 3;
}

message Pricing {
  float base_rate_usd_per_hour = 1;
  float gpu_multiplier = 2;
  float effective_rate = 3;
}

// ==================== 任務管理 ====================

message TaskAssign {
  string task_id = 1;
  string job_id = 2;
  uint32 priority = 3;
  uint32 estimated_duration_sec = 4;
  TaskRequirements requirements = 5;
  TaskPayload payload = 6;
  Pricing pricing = 7;
}

message TaskRequirements {
  uint32 min_vram_gb = 1;
  string min_compute_capability = 2;
  string framework = 3;
  bool fp16 = 4;
}

message TaskPayload {
  string model_url = 1;
  string model_hash = 2;
  string input_data_url = 3;
  string output_url = 4;
  map<string, string> config = 5;
}

message TaskAccept {
  string task_id = 1;
  string agent_id = 2;
  uint32 gpu_allocated = 3;
  string estimated_completion = 4;
}

message TaskReject {
  string task_id = 1;
  string reason = 2;
  string details = 3;
}

message TaskProgress {
  string task_id = 1;
  float progress = 2;
  string stage = 3;
  TaskMetrics metrics = 4;
  uint64 timestamp = 5;
}

message TaskMetrics {
  float gpu_utilization = 1;
  float memory_used_gb = 2;
  float throughput_tokens_per_sec = 3;
}

message TaskComplete {
  string task_id = 1;
  TaskResult result = 2;
  ProofOfWork proof_of_work = 3;
  ExecutionMetrics metrics = 4;
}

message TaskResult {
  string output_url = 1;
  string output_hash = 2;
  uint32 execution_time_sec = 3;
  uint32 gpu_time_sec = 4;
}

message ProofOfWork {
  string method = 1;
  string challenge_id = 2;
  bytes response = 3;
  string gpu_signature = 4;
}

message ExecutionMetrics {
  float avg_gpu_utilization = 1;
  float peak_memory_gb = 2;
  float energy_kwh = 3;
}

message TaskFailed {
  string task_id = 1;
  ErrorInfo error = 2;
  string partial_results = 3;
}

message ErrorInfo {
  string code = 1;
  string message = 2;
  string details = 3;
}

// ==================== 監控與指標 ====================

message Heartbeat {
  string agent_id = 1;
  string status = 2;
  string current_task_id = 3;
  repeated GPUStatus gpu_status = 4;
  uint64 uptime_sec = 5;
  uint64 timestamp = 6;
}

message GPUStatus {
  uint32 index = 1;
  float utilization = 2;
  float memory_used_gb = 3;
  float memory_total_gb = 4;
  float temperature_c = 5;
  float power_draw_w = 6;
  float fan_speed_percent = 7;
}

message MetricsBatch {
  string agent_id = 1;
  TimeRange time_range = 2;
  AggregatedMetrics aggregated_metrics = 3;
}

message TimeRange {
  string start = 1;
  string end = 2;
}

message AggregatedMetrics {
  uint32 tasks_completed = 1;
  uint32 tasks_failed = 2;
  float total_gpu_hours = 3;
  float avg_gpu_utilization = 4;
  float total_energy_kwh = 5;
  float earnings_usd = 6;
}

// ==================== 收益管理 ====================

message EarningsRecord {
  string task_id = 1;
  EarningsDetail earnings = 2;
  string status = 3;
  string estimated_payout_date = 4;
}

message EarningsDetail {
  float gpu_hours = 1;
  float rate_usd_per_hour = 2;
  float amount_usd = 3;
  float bonus_multiplier = 4;
  float final_amount_usd = 5;
}

message PayoutNotification {
  string payout_id = 1;
  PayoutPeriod period = 2;
  PayoutSummary summary = 3;
  string payment_method = 4;
  string payment_address = 5;
  string status = 6;
}

message PayoutPeriod {
  string start = 1;
  string end = 2;
}

message PayoutSummary {
  uint32 total_tasks = 1;
  float total_gpu_hours = 2;
  float gross_amount_usd = 3;
  float platform_fee_usd = 4;
  float net_amount_usd = 5;
}

// ==================== 工作證明 ====================

message PowChallenge {
  string challenge_id = 1;
  bytes nonce = 2;
  uint32 difficulty = 3;
  string deadline = 4;
}

message PowResponse {
  string challenge_id = 1;
  bytes response = 2;
  uint32 computation_time_ms = 3;
  GPUSignature gpu_signature = 4;
}

message GPUSignature {
  string device_uuid = 1;
  string cuda_version = 2;
}

// ==================== 錯誤處理 ====================

message Error {
  string code = 1;
  string message = 2;
  map<string, string> context = 3;
  bool recoverable = 4;
}
